whoami.yml
kind: Deployment
apiVersion: apps/v1
metadata:
  name: whoami
spec:
  selector:
    matchLabels:
      app: whoami
  replicas: 1
  template:
    metadata:
      labels:
        app: whoami
    spec:
      containers:
        - name: whoami
          image: traefik/whoami:latest

---
apiVersion: v1
kind: Service
metadata:
  name: whoami
spec:
  type: ClusterIP
  ports:
    - port: 8080
      name: whoami
      targetPort: 80
      protocol: TCP
  selector:
    app: whoami
